# GenPano

./: .COMMIT_MSG_PLAN_J_D1_D4.txt  .commit_msg_a1_layer3_wip.txt  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOY_GUIDE.md  Makefile  PRD.md  README.md  REFACTOR_PLAN.md  debug_gemini.py  docker-compose.admin.yml  docker-compose.preview.yml  docker-compose.yml  nginx-preview.conf  render.yaml  smoke-a1-output.txt  test_gemini_simple.py  trigger_gemini_now.py  vercel.json  verify-a1-output.txt
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_27_0231_cdfdaab4088e_baseline.py  2026_04_27_0914_55a628f2bb7d_admin_auth_baseline.py  2026_04_28_1252_15500b81322a_session_a1_baseline_8_tables_plus_.py  2026_04_28_1700_8a3f1d2c5e7b_session_a1_step3_users_table_plus_3_fk.py  2026_04_29_0001_user_auth_module.py  2026_05_04_0001_legacy_sql_into_alembic.py  2026_05_04_0002_phase_0_app_product_tables.py  2026_05_05_0001_phase_e_exports.py  2026_05_05_0002_phase_n_alerts.py  2026_05_05_0003_phase_m_api_keys.py  2026_05_05_0004_phase_k_kg.py  2026_05_05_0005_phase_d_diagnostics.py  2026_05_05_0006_phase_rp_reports.py  2026_05_05_0007_phase_o_admin_ops.py  2026_05_05_0008_phase_a_analyzer.py  2026_05_06_0001_topic_score_daily.py  2026_05_06_0002_admin_console_consolidation.py  2026_05_06_0003_admin_users.py  2026_05_06_0004_drop_audit_operator_fk.py  2026_05_07_0001_query_pool_schema_repair.py  2026_05_07_0002_llm_accounts_schema_repair.py  2026_05_09_0001_chart_data_support.py  2026_05_10_0001_brand_context_snapshots.py  2026_05_10_0002_query_candidate_metadata.py  2026_05_10_0003_llm_extraction_candidates.py  2026_05_10_0004_backfill_query_prompt_links.py  2026_05_10_0005_promote_brand_mentions.py  2026_05_10_0005_query_schedule_batch_plans.py  2026_05_10_0006_merge_brand_mentions_and_schedule.py  2026_05_11_0001_quota_counter_repairs.py  2026_05_13_0001_analyzer_v4_facts.py  2026_05_13_0002_analyzer_submit_batches.py  2026_05_14_0001_doubao_pool_unblock.py  2026_05_16_0001_alert_snooze.py  2026_05_17_0001_llm_accounts_expired_transition_count.py  2026_05_17_0002_llm_accounts_execution_mode.py  2026_05_18_0001_response_analyses_geo_score_nullable.py  2026_05_18_0001_set_bestcoffer_industry.py  2026_05_18_0002_merge_geo_industry_heads.py  2026_05_18_0002_merge_heads.py  (+3 more)
backend/app/: celery_app.py  main.py
backend/app/__ci_fixtures__/: D10_cookie_samesite_lax.cifixture.py  D8_hardcoded_jwt_secret.cifixture.py  D9_bcrypt_cost_8.cifixture.py  F1_playwright_bare_import.cifixture.py  F4_1_no_response_source_stamp.cifixture.py  F4_2_api_fallback_no_label.cifixture.py  F4_3_orm_insert_no_response_source.cifixture.py  J1_admin_write_no_audit.cifixture.py  J2_account_pool_rewrite.cifixture.py  J3_rbac_non_super_admin.cifixture.py  J4_cookie_unmasked_response.cifixture.py  J5_user_data_write.cifixture.py
backend/app/admin/: __init__.py  audit.py  brand_context.py  security.py
backend/app/alerts/: __init__.py  dispatcher.py  triggers.py
backend/app/core/: config.py  errors.py  filters.py  logging.py  pagination.py  rate_limit.py  request_id.py  security.py  security_headers.py
backend/app/db/: _upstream_stubs.py  base.py  session.py
backend/app/diagnostics/: __init__.py  (+6 more)
backend/docs/: SESSION_A0_STEP_8_SMOKE_CHECKLIST.md
backend/email_previews/: index.html  reset-password.en-US.html  reset-password.zh-CN.html  verify-email.en-US.html  verify-email.zh-CN.html  welcome.en-US.html  welcome.zh-CN.html
backend/genpano_models/: __init__.py  admin_console.py  admin_ops.py  alert.py  analyzer.py  analyzer_phase_a.py  api_key.py  base.py  brand_submission.py  commercial_lead.py  crawl_request.py  diagnostic.py  export_job.py  industry_pricing.py  kg.py  project.py  report.py  user.py
backend/scripts/: admin-bootstrap.py  app_analytics_readonly_evidence.py  app_product_entities_backfill.py  backfill_phase_a.py  backfill_product_score_daily.py  bootstrap_app_project_context.py  ci_check.py  ci_harness_selftest.py  clear_layer3_fixtures.py  decision_log_sync_check.py  diagnose_admin_login.py  inspect_products_response.py  preview_user_emails.py  promote_kg_candidates.py  seed_layer3_fixtures.py
backend/static/: admin.html
backend/tests/: conftest.py  test_admin_auth_session_contract.py  test_admin_cookie_secure_flag.py  test_admin_meta_whoami.py  test_admin_session_cookie_self_heal.py  test_audit_emit_coverage.py  test_batch_retry_via_vm_endpoint.py  test_bootstrap_app_project_context.py  test_competitor_industry_filter.py  test_issue_1020_domain_tier_heuristic.py  test_issue_1031_trend_evidence_rollup.py  test_issue_1039_topic_product_rollup.py  test_issue_1040_aggregate_products_backfill.py  test_issue_1049_v3_topic_product.py  test_issue_1116_admin_vm_accounts.py  test_issue_1165_pano_project_api_contract.py  test_issue_1166_pano_trend_admin_chain_competitors.py  test_issue_1202_sentiment_by_engine_contract.py  test_issue_1207_pano_score_dilution.py  test_issue_1225_citation_mapper_competitor_domains.py  test_issue_1225_citation_share_competitive_set_gate.py  test_issue_1225_citation_share_window_denominator.py  test_issue_486_app_analytics_contracts.py  test_issue_523_estee_product_entities.py  test_issue_533_app_analytics_no_fallback.py  test_issue_537_app_analytics_readonly_evidence.py  test_issue_562_app_analytics_endpoint_consistency.py  test_issue_569_app_sentiment_consistency.py  test_issue_573_app_sentiment_by_engine_evidence.py  test_issue_578_server_diagnostics_workflow.py  test_issue_587_topics_success_only_contracts.py  test_issue_588_pipeline_profile_analyzer.py  test_issue_602_analyzer_fact_contract.py  test_issue_603_analyzer_evidence_contract.py  test_issue_652_herosms_deploy_env.py  test_issue_687_bestcoffer_app_api_contract.py  test_issue_711_analyzer_v3_fact_contract.py  test_issue_744_bestcoffer_chart_aggregates.py  test_issue_782_admin_analyzer_api.py  test_issue_783_app_chart_aggregation.py  (+140 more)
(+1194 files in other folders)
