[project]
name = "genpano-backend"
version = "0.0.1"
description = "GENPANO Python backend - GEO monitoring platform (Session 0' baseline)"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi>=0.111,<0.120",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<0.31",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<0.30",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "slowapi>=0.1.9,<0.2",
    "python-multipart>=0.0.9,<0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "aiosqlite>=0.20,<0.22",
    "psycopg[binary]>=3.2,<4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "kombu", "kombu.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
