[project]
name = "genpano-backend"
version = "0.0.1"
description = "GENPANO Python backend - GEO monitoring platform (Session 0' baseline)"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi>=0.111,<0.120",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<0.31",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<0.30",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<5.0",
    "zxcvbn>=4.4,<5.0",
    "slowapi>=0.1.9,<0.2",
    "python-multipart>=0.0.9,<0.1",
    "croniter>=2.0,<7.0",
    "itsdangerous>=2.2.0",
    "email-validator>=2.3.0",
    "fpdf2>=2.8.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "aiosqlite>=0.20,<0.22",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["alembic/versions", "**/__ci_fixtures__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Topic Plan helpers contain Chinese regex / prompt text where fullwidth
# punctuation (？，（）。…) is semantically meaningful — RUF001/RUF002/RUF003
# would force lossy transliteration to ASCII. E501 is exempted because the
# Doubao 2 prompt template intentionally keeps long Chinese sentences on
# one line so the LLM-facing system prompt reads naturally. Same set of
# exceptions admin_console.topic_plan was running under historically.
"app/admin/topic_plan/**" = ["RUF001", "RUF002", "RUF003", "E501"]
# Same exception for prompt_matrix — Chinese regex / Doubao prompt text.
"app/admin/prompt_matrix/**" = ["RUF001", "RUF002", "RUF003", "E501"]
# Query Pool helpers also contain Chinese regex / Doubao prompt text + the
# fallback query templates ZH/EN. Same exception set as topic_plan.
"app/admin/query_pool/**" = ["RUF001", "RUF002", "RUF003", "E501"]
# Test fixtures use the same fullwidth-punctuation Chinese strings as the
# real LLM responses they simulate; match the source-file exception so
# tests don't fail purely on transliteration grounds.
"tests/test_phase_5_slice3b_iii_*" = ["RUF001", "RUF002", "RUF003"]
# Regression test for issue #1185 quotes the user's verbatim Chinese bug
# report in its module docstring (Hard Rule 1: capture broken-surface
# output). The fullwidth punctuation must be preserved for evidence
# fidelity, so transliteration is not acceptable here.
"tests/test_competitor_industry_filter.py" = ["RUF001", "RUF002", "RUF003"]
# Same evidence-fidelity exception: quotes the AI leader's verbatim
# Chinese feedback about the heatmap surface.
"tests/test_topic_heatmap_competitor_autofill.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["__ci_fixtures__"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "kombu", "kombu.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# json_repair is an optional fallback for malformed LLM JSON output. We
# guard the import with try/except, so missing stubs aren't a real type
# concern — but mypy still complains about the import line itself.
module = ["json_repair"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored from admin_console (Phase X). Keep the original duck-typed
# style — these are best-effort web scrapers where explicit annotations
# obscure the schema-drift defensiveness. Future cleanup can tighten
# this when we rewrite the LLM prompt + collector layer.
module = ["app.admin.hot_topics.collectors"]
disallow_untyped_defs = false
warn_unreachable = false
warn_unused_ignores = false
disable_error_code = [
    "call-arg",
    "type-arg",
    "no-any-return",
    "no-untyped-def",
    "unreachable",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
